Fix monitor/blocks overflow flaws

--- a/src/components/toolbox/table/table.css
+++ b/src/components/toolbox/table/table.css
@@ -186,9 +186,3 @@
     opacity: 1;
   }
 }
-
-@media (--large-viewport) {
-  .row {
-    flex-wrap: inherit;
-  }
-}
